--- a/.gitignore
+++ b/.gitignore
@@ -640,3 +640,35 @@ dataset/audios_train/audio_1329.wav
 dataset/audios_train/audio_1332.wav
 dataset/audios_train/audio_1333.wav
 dataset/audios_train/audio_1335.wav
+wandb/run-20250407_235721-jy68ku8i/run-jy68ku8i.wandb
+wandb/run-20250407_235721-jy68ku8i/files/output.log
+wandb/run-20250407_235721-jy68ku8i/files/requirements.txt
+wandb/run-20250407_235721-jy68ku8i/files/wandb-metadata.json
+wandb/run-20250407_235721-jy68ku8i/logs/debug-internal.log
+wandb/run-20250407_235721-jy68ku8i/logs/debug.log
+wandb/run-20250407_235807-hdzpjq3u/logs/debug.log
+wandb/run-20250407_235923-f24vjbq7/logs/debug.log
+wandb/run-20250407_235945-h4p246kb/run-h4p246kb.wandb
+wandb/run-20250407_235945-h4p246kb/files/output.log
+wandb/run-20250407_235945-h4p246kb/files/requirements.txt
+wandb/run-20250407_235945-h4p246kb/files/wandb-metadata.json
+wandb/run-20250407_235945-h4p246kb/logs/debug-internal.log
+wandb/run-20250407_235945-h4p246kb/logs/debug.log
+wandb/run-20250408_000051-ukq2eez7/run-ukq2eez7.wandb
+wandb/run-20250408_000051-ukq2eez7/files/output.log
+wandb/run-20250408_000051-ukq2eez7/files/requirements.txt
+wandb/run-20250408_000051-ukq2eez7/files/wandb-metadata.json
+wandb/run-20250408_000051-ukq2eez7/logs/debug-internal.log
+wandb/run-20250408_000051-ukq2eez7/logs/debug.log
+wandb/run-20250408_000212-80mxms3o/run-80mxms3o.wandb
+wandb/run-20250408_000212-80mxms3o/files/output.log
+wandb/run-20250408_000212-80mxms3o/files/requirements.txt
+wandb/run-20250408_000212-80mxms3o/files/wandb-metadata.json
+wandb/run-20250408_000212-80mxms3o/logs/debug-internal.log
+wandb/run-20250408_000212-80mxms3o/logs/debug.log
+wandb/run-20250408_000652-qmq5q3ug/run-qmq5q3ug.wandb
+wandb/run-20250408_000652-qmq5q3ug/files/output.log
+wandb/run-20250408_000652-qmq5q3ug/files/requirements.txt
+wandb/run-20250408_000652-qmq5q3ug/files/wandb-metadata.json
+wandb/run-20250408_000652-qmq5q3ug/logs/debug-internal.log
+wandb/run-20250408_000652-qmq5q3ug/logs/debug.log
